--- a/web/css/main.css
+++ b/web/css/main.css
@@ -658,6 +658,7 @@ ul.sub-menu {
   margin-bottom: 35px;
   padding-bottom: 20px;
   padding-top: 15px;
+  padding-left: 15px;
 }
 .left-sidebar h2, .brands_products h2 {
   color: #FE980F;
